--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,3 +3,13 @@ requires = ["setuptools>=45", "wheel", "oldest-supported-numpy", "cmake", "ninja
 build-backend = "setuptools.build_meta"
 
 [tools.setuptools_scm]
+
+[tool.ruff]
+src = ["src/simsopt"] 
+ignore = ["E226","E265","E266","E4","E501","E701","E702","E712","E722","E731","E741","F403","F405","F406","W5"]
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["E402","F401"]
+"tests/verify_MPI_not_initialized.py" = ["F401"]
+"tests/geo/test_plot.py" = ["F401"]
+"tests/geo/test_curve.py" = ["F401"]
+
