--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ classifier =
     Development Status :: 3 - Alpha
     Intended Audience :: Science/Research
     Topic :: Scientific/Engineering :: Physics
-    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
+    License :: OSI Approved :: MIT License
     Operating System :: MacOS :: MacOS X
     Operating System :: POSIX :: Linux
     Environment :: Console
