--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "thirdparty/fmt"]
 	path = thirdparty/fmt
 	url = https://github.com/fmtlib/fmt.git
+[submodule "thirdparty/LinkingNumber"]
+	path = thirdparty/LinkingNumber
+	url = git@github.com:andrewgiuliani/LinkingNumber.git
