--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ extend-exclude = ["thirdparty"]
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["E402","F401"]
 "src/simsopt/field/magneticfieldclasses.py" = ["E743"]
+"src/simsopt/mhd/bootstrap.py" = ["F841"]
 "tests/verify_MPI_not_initialized.py" = ["F401"]
 "tests/geo/test_plot.py" = ["F401"]
 "tests/geo/test_curve.py" = ["F401"]
