More linter fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ extend-exclude = ["thirdparty"]
 "__init__.py" = ["E402","F401"]
 "src/simsopt/field/magneticfieldclasses.py" = ["E743"]
 "src/simsopt/mhd/bootstrap.py" = ["F841"]
+"src/simsopt/mhd/vmec_diagnostics.py" = ["F841"]
 "tests/verify_MPI_not_initialized.py" = ["F401"]
 "tests/geo/test_plot.py" = ["F401"]
 "tests/geo/test_curve.py" = ["F401"]
