Add the missing imports back

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,5 @@ extend-exclude = ["thirdparty"]
 "tests/verify_MPI_not_initialized.py" = ["F401"]
 "tests/geo/test_plot.py" = ["F401"]
 "tests/geo/test_curve.py" = ["F401"]
+"tests/geo/test_surface.py" = ["F401"]
 "tests/mhd/test_virtual_casing.py" = ["F841"]
