Change the license to MIT in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,8 @@ name = simsopt
 description: Framework for optimizing stellarators
 long_description = file: README.md
 long_description_content_type = text/markdown
-license = GNU Lesser General Public License Version 3
-license_files = COPYING, COPYING.LESSER
+license = MIT
+license_files = LICENSE
 author = "Matt Landreman, Bharat Medasani, Florian Wechsung"
 author_email = mattland@umd.edu, mbkumar@gmail.com, wechsung@nyu.edu
 maintainer = "Bharat Medasani"
