--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,18 +83,13 @@ Repository = "https://github.com/hiddenSymmetries/simsopt"
 
 [tool.setuptools_scm]
 write_to = "src/simsopt/_version.py"
-local_scheme = "git-describe"
+local_scheme = "dirty"
 
 [tool.scikit-build]
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
-sdist.include = ["src/package/_version.py"]
+sdist.include = ["src/simsopt/_version.py"]
 build-dir = "build/{wheel_tag}"
 
-[tool.scikit-build.generate]
-path = "package/_version.py"
-template = '''
-version = "${version}"
-'''
 
 [tool.ruff]
 src = ["src/simsopt"] 
