Update CMakeLists for macos runner in CI builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,8 +41,12 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 include(CheckCXXCompilerFlag)
 IF(DEFINED ENV{CI})
-    message(STATUS "CI environment detected. Set compilation flags targetting Westmere microarch.")
-    set(CMAKE_CXX_FLAGS "-O3 -march=westmere")
+    if (APPLE)
+    	set(CMAKE_CXX_FLAGS "-O3")
+    else()
+        message(STATUS "CI environment detected. Set compilation flags targetting Westmere microarch.")
+        set(CMAKE_CXX_FLAGS "-O3 -march=westmere")
+    endif()
 elseif(DEFINED ENV{CONDA_BUILD})
     message(STATUS "conda build environment detected. Let conda set compilation flags accordingly.")
     # set(CMAKE_CXX_FLAGS "-O3 -march=ivybridge -mfma -ffp-contract=fast")
