--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,8 +130,6 @@ jobs:
       run: |
         cd SPEC
         pip install .
-        # python setup.py bdist_wheel
-        # pip install dist/*.whl
 
     - name: Try import spec
       run: python -c "import spec.spec_f90wrapped as spec; print(spec.constants.version)"
@@ -159,7 +157,8 @@ jobs:
       run: python -c "print(dir()); import vmec; print(dir()); print(dir(vmec)); print('package:', vmec.__package__); print('spec:', vmec.__spec__); print('doc:', vmec.__doc__); print('file:', vmec.__file__); print('path:', vmec.__path__)"
 
     - name: Install simsopt package
-      run: env CMAKE_BUILD_TYPE=Debug pip install -v .[MPI,SPEC]
+      # run: env CMAKE_BUILD_TYPE=Debug pip install -v .[MPI,SPEC]
+      run: pip install -v ".[MPI,SPEC]"
 
     - name: Verify that importing simsopt does not automatically initialize MPI
       run: ./tests/verify_MPI_not_initialized.py
