--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -1,9 +1,9 @@
-{% set data = load_setup_py_data(setup_file='../setup.py', from_recipe_dir=True) %}
-{% set version = data.get('version') %}
+# {% set data = load_setup_py_data(setup_file='../setup.py', from_recipe_dir=True) %}
+# {% set version = data.get('version') %}
 
 package:
   name: simsopt
-  version: {{ version }}
+  version: {{ GIT_DESCRIBE_TAG }}+{{ GIT_BUILD_STR }}
 
 source:
   path: ..
