--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,26 +52,26 @@ keywords = [
     "magnetostatics"
 ]
 dependencies = [
-    'numpy>=1.21',
-    'jax>=0.2.5',
-    'jaxlib>=0.1.56',
-    'scipy>=1.5.4',
-    'Deprecated>=1.2.10',
-    'nptyping>=1.3.0',
-    'monty>=2021.6.10',
-    'ruamel.yaml',
-    'sympy',
-    'f90nml',
-    'randomgen',
-    'pyevtk',
-    'matplotlib'
+    "numpy>=1.21",
+    "jax>=0.2.5",
+    "jaxlib>=0.1.56",
+    "scipy>=1.5.4",
+    "Deprecated>=1.2.10",
+    "nptyping>=1.3.0",
+    "monty>=2021.6.10",
+    "ruamel.yaml",
+    "sympy",
+    "f90nml",
+    "randomgen",
+    "pyevtk",
+    "matplotlib"
 ]
 dynamic = ["version"]
 
 [project.optional-dependencies]
 SPEC = ["py_spec>=3.0.1", "pyoculus>=0.1.1", "h5py>=3.1.0"]
 MPI = ["mpi4py>=3.0.3"]
-VIS = ["vtk >= 8.1.2", "PyQt5", "mayavi"]
+VIS = ["vtk >= 8.1.2", "PyQt5", "mayavi", "plotly", "networkx"]
 DOCS = ["sphinx", "sphinx-rtd-theme"]
 
 [project.urls]
