Test without 3.10 in coverage

--- a/.github/workflows/extensive_ci.yml
+++ b/.github/workflows/extensive_ci.yml
@@ -29,7 +29,7 @@ jobs:
       matrix:
         test-type: [unit, integrated]
         packages: [all, vmec, spec, none]
-        python-version: [3.8.17, 3.9.17, 3.10.13] # To sync with coveragerc use 3 levels with python version
+        python-version: [3.8.17, 3.9.17] # , 3.10.13] # To sync with coveragerc use 3 levels with python version
         include:
             - python-version: 3.9.17
               test-type: unit
@@ -251,7 +251,7 @@ jobs:
     - name: Set up Python 
       uses: actions/setup-python@v4
       with:
-        python-version: 3.10.13
+        python-version: 3.9.17
 
     - name: Install coverage
       run: pip install coverage
