--- a/.github/workflows/non_simd_tests.yml
+++ b/.github/workflows/non_simd_tests.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.9.17] # To sync with coveragerc use 3 level
+        python-version: [3.9]
 
     steps:
     # First print out lots of information. We do this in separate 
