--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.9.17] # To sync with coveragerc use 3 level
+        python-version: [3.9]
         test-type: [unit, integrated]
 
     steps:
