--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,7 +83,7 @@ Repository = "https://github.com/hiddenSymmetries/simsopt"
 
 [tool.setuptools_scm]
 write_to = "src/simsopt/_version.py"
-local_scheme = "dirty"
+# local_scheme = "dirty"
 
 [tool.scikit-build]
 metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
