--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -165,7 +165,9 @@ jobs:
       run: |
           git clone git@github.com:enthought/mayavi.git
           cd mayavi
-          pip install .
+          pip install -r requirements.txt
+          pip install PyQt5
+          python setup.py install
 
     - name: Install simsopt package
       # run: env CMAKE_BUILD_TYPE=Debug pip install -v .[MPI,SPEC]
