--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -163,7 +163,7 @@ jobs:
       
     - name: Try installing mayavi from source
       run: |
-          git clone git@github.com:enthought/mayavi.git
+          git clone https://github.com/enthought/mayavi.git
           cd mayavi
           pip install -r requirements.txt
           pip install PyQt5
