proper use of environment variable

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,7 @@ jobs:
     env:
       OMPI_ALLOW_RUN_AS_ROOT: 1
       OMPI_ALLOW_RUN_AS_ROOT_CONFIRM: 1
+      QT_QPA_PLATFORM: offscreen
 
     strategy:
       fail-fast: false
@@ -167,7 +168,6 @@ jobs:
           cd mayavi
           pip install vtk>=8.1.2, PyQt5
           python setup.py install
-          export QT_QPA_PLATFORM=offscreen
 
     - name: Install simsopt package
       # run: env CMAKE_BUILD_TYPE=Debug pip install -v .[MPI,SPEC]
