--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,7 @@ jobs:
     env:
       OMPI_ALLOW_RUN_AS_ROOT: 1
       OMPI_ALLOW_RUN_AS_ROOT_CONFIRM: 1
+      ETS_TOOLKIT: 'null'
 
     strategy:
       fail-fast: false
@@ -163,8 +164,6 @@ jobs:
       
     - name: Try installing mayavi from source
       run: |
-          pip uninstall opencv-python
-          pip install opencv-python-headless
           git clone https://github.com/enthought/mayavi.git
           cd mayavi
           pip install vtk>=8.1.2, PyQt5
