Try one idea for fixing mayavi installation in docker and singularity CI workflows

--- a/ci/Dockerfile.ubuntu
+++ b/ci/Dockerfile.ubuntu
@@ -54,8 +54,8 @@ RUN git clone --depth 1 https://github.com/hiddenSymmetries/VMEC2000.git /src/VM
     /venv/bin/pip install -v . 2>&1 | tee vmec_build.log
 
 RUN /venv/bin/pip install h5py pyoculus py_spec
-RUN /venv/bin/pip install vtk==9.2.6 pyqt5 matplotlib pyevtk plotly
 RUN /venv/bin/pip install mayavi
+RUN /venv/bin/pip install vtk pyqt5 matplotlib pyevtk plotly
 RUN /venv/bin/pip install  git+https://github.com/hiddenSymmetries/booz_xform
 RUN /venv/bin/pip install  git+https://github.com/hiddenSymmetries/virtual-casing
 RUN /venv/bin/pip install  git+https://github.com/rogeriojorge/pyQIC
