--- a/ci/Dockerfile.ubuntu
+++ b/ci/Dockerfile.ubuntu
@@ -48,7 +48,7 @@ RUN git clone --depth 1 https://github.com/PrincetonUniversity/SPEC.git /src/SPE
     cd /src/SPEC   &&  \
     /venv/bin/pip install -v . 2>&1 | tee spec_build.log
     
-RUN git clone --depth 1 https://github.com/hiddenSymmetries/VMEC2000.git /src/VMEC && \
+RUN git clone --depth 1 https://github.com/hiddenSymmetries/VMEC2000.git@ml/numpy2_fix_4 /src/VMEC && \
     cd /src/VMEC && \
     cp cmake/machines/ubuntu.json cmake_config_file.json && \
     /venv/bin/pip install -v . 2>&1 | tee vmec_build.log
