--- a/.github/workflows/extensive_test.yml
+++ b/.github/workflows/extensive_test.yml
@@ -71,7 +71,7 @@ jobs:
     # We must run actions/checkout before downloading and building VMEC, since checkout deletes the contents of the directory.
     - name: Download the VMEC2000 standalone repository
       if: contains(matrix.packages, 'vmec') || contains(matrix.packages, 'all')
-      run: git clone https://github.com/hiddensymmetries/VMEC2000.git@ml/numpy2_fix_4
+      run: git clone -b ml/numpy2_fix_4 https://github.com/hiddensymmetries/VMEC2000.git
 
     - name: ls -l again
       run: |
