--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -66,7 +66,7 @@ jobs:
 
     # We must run actions/checkout before downloading and building VMEC, since checkout deletes the contents of the directory.
     - name: Download the VMEC2000 standalone repository
-      run: git clone --depth=1 https://github.com/hiddensymmetries/VMEC2000.git@ml/numpy2_fix_4
+      run: git clone -b ml/numpy2_fix_4 --depth=1 https://github.com/hiddensymmetries/VMEC2000.git
 
     - name: ls -l again
       run: |
