--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ dependencies = [
     "jaxlib>=0.1.56",
     "scipy>=1.5.4",
     "Deprecated>=1.2.10",
-    "nptyping>=1.3.0",
+    # "nptyping>=1.3.0",
     "monty>=2021.6.10",
     "ruamel.yaml",
     "sympy",
