--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,12 +52,11 @@ keywords = [
     "magnetostatics"
 ]
 dependencies = [
-    "numpy>=1.21",
+    "numpy>=1.21,<2.0.0",
     "jax>=0.2.5",
     "jaxlib>=0.1.56",
     "scipy>=1.5.4",
     "Deprecated>=1.2.10",
-    # "nptyping>=1.3.0",
     "monty>=2021.6.10",
     "ruamel.yaml",
     "sympy",
