Use CZhu's main_off branch for f90wrap

--- a/ci/Dockerfile.ubuntu
+++ b/ci/Dockerfile.ubuntu
@@ -41,7 +41,7 @@ RUN python3 -m venv /venv/
 
 RUN /venv/bin/pip install -U pip
 RUN /venv/bin/python -m pip install numpy scipy jax jaxlib f90nml mpi4py jupyter notebook ipython qsc sympy scikit-build ninja "pybind11[global]" cmake
-RUN /venv/bin/pip install git+https://github.com/zhucaoxiang/f90wrap
+RUN /venv/bin/pip install git+https://github.com/zhucaoxiang/f90wrap@main_off
 ENV PATH="/venv/bin:${PATH}"
 
 RUN git clone --depth 1 https://github.com/PrincetonUniversity/SPEC.git /src/SPEC && \
