--- a/.github/workflows/extensive_test.yml
+++ b/.github/workflows/extensive_test.yml
@@ -126,7 +126,7 @@ jobs:
         python -c "import py_spec; print('success')"
 
     - name: Install f90wrap
-      run: pip install -U git+https://github.com/zhucaoxiang/f90wrap
+      run: pip install -U git+https://github.com/zhucaoxiang/f90wrap@main_off
 
     - name: Build SPEC python wrapper.
       if: contains(matrix.packages, 'spec') || contains(matrix.packages, 'all')
